# fluent-python-sample

./: eg_09_02.py  pyproject.toml
vector/: vector.py
