[tool.poetry]
name = "fluent-python-sample"
version = "0.1.0"
description = ""
authors = ["kaito2 <kaito.iwatsuki@nislab.doshisha.ac.jp>"]

[tool.poetry.dependencies]
python = "^3.8"

[tool.poetry.dev-dependencies]
autopep8 = "^1.5.3"
flake8 = "^3.8.3"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
